--- a/proto.html
+++ b/proto.html
@@ -268,13 +268,8 @@
 		
 		<canvas id="shapebg4" width=2000 height=2000></canvas>
 		<div class="pagestuff">
-			<h2>Your Achievments:</h2>
-			<br />
-			<img src="pngBtns/scoregrey.png" alt="Locked Achievment" id="img0">
-			<img src="pngBtns/streakgrey.png" alt="Locked Achievment" id="img1">
-			<img src="pngBtns/levelgrey.png" alt="Locked Achievment" id="img2">	
-			<br />
-			<a href="#dialog-form2" id="viewAchiev"><h2>Click to see what achievements your friend has earned (shown below)!</h2></a>
+
+			<a href="#dialog-form2" id="viewAchiev"><h2>Click to see what achievements you or your friend(s) have earned (shown below)!</h2></a>
 			<br />
 			<!--<form>
 				Username: <input type="text" name="FirstName" id="uname" value=""><br>
@@ -689,31 +684,6 @@ $(function() {
 			allFields.removeClass( "ui-state-error" );
 			username = name.val();
 			userpass = password.val();
-			$.getJSON("https://api.mongolab.com/api/1/databases/comp2910/collections/Achievements?apiKey=Vj5CySJu_PZcXUFihbe274Ty73YE9rHJ", function(data){
-
-				var nameArr = ["", "", ""];
-				$.each(data, function(index, value){
-					if (value.name == username && value.password == userpass) {
-						if (value.achieveReached[0] == true)
-							nameArr[0] = "pngBtns/ScoreAchiev.png";
-						else
-							nameArr[0] = "pngBtns/scoregrey.png";
-						if (value.achieveReached[1] == true)
-							nameArr[1] = "pngBtns/StreakAchiev.png";
-						else
-							nameArr[1] = "pngBtns/streakgrey.png";
-						if (value.achieveReached[2] == true)
-							nameArr[2] = "pngBtns/LevelAchiev.png";
-						else
-							nameArr[2] = "pngBtns/levelgrey.png";
-					}
-				});
-				$("#img0").attr("src", nameArr[0]);
-				$("#img1").attr("src", nameArr[1]);
-				$("#img2").attr("src", nameArr[2]);
-				
-				/*$('#tblLeaderBoard').append(html);*/
-			});
 			$.getJSON("https://api.mongolab.com/api/1/databases/comp2910/collections/Achievements?q={\"name\":\""+name.val()+"\",\"password\":\""+password.val()+"\"}&apiKey=Vj5CySJu_PZcXUFihbe274Ty73YE9rHJ", function(data){
 				$.each(data, function(index, value){
 					userID = value._id["$oid"];
