Colour changes for rules

--- a/proto.html
+++ b/proto.html
@@ -526,7 +526,7 @@ var mobPauseTimestamp = null;			// Timestamp for initiation of a mob-pause
 var mobPauseDuration = 3;				// Seconds delay (for new mobs) before level-up
 var mobPause2Duration = 2;				// Seconds delay after level-up
 var mobStarPoints = 5;					// Number of points stars have
-var mobStrokeWidth = 2;					// Stroke width for moving shapes
+var mobStrokeWidth = 4;					// Stroke width for moving shapes
 var mobShapes = 5;						// Number of different types of shapes
 var mobFills = ['#ff0000', '#00ff00', '#0000ff', '#ff00ff', '#ffff00'];		// Fill colours
 var mobStrokes = ['#cc6666', '#66cc66', '#6666cc', '#cc66cc', '#cccc66'];	// Stroke colours
@@ -562,10 +562,10 @@ var rulesFontSize = 40;
 var rulesFont = "arial";
 var rulesNoWidth = 6;					// Line-width for the 'no' symbol
 var rulesStrokeWidth = 4;				// Stroke-width for the rules shape
-var rulesColour = "white";
+var rulesColour = "red";
 var rulesNoSize = 1.5;					// How big the 'no' symbol for rules should be, vs mob-size
 var rulesNoColour = "red";				// Colour for 'no' symbol
-var rulesShapeColour = "white";			// Colour for rules shapes
+var rulesShapeColour = "black";			// Colour for rules shapes
 var ruleShapePosMax = 1;				// Max number of must-have-this-shape rules
 var ruleShapeNegMax = 2;				// Max number of must-not-have-this-shape rules
 var ruleColourPosMax = 1;				// Max number of must-have-this-colour rules
@@ -629,8 +629,7 @@ var achFont = "comic sans";
 var achFontSizeStart = 80;				// Initial ach font size
 var achFontSizeEnd = 300;				// Ending ach font size
 var achDuration = 5;					// "Achievement" event duration in seconds
-var achFontColour = "255,255,0";		// Font colour in comma-separated RGB
-var achPaperColour = '#000000';			// Font colour for Paper.js
+var achPaperColour = 'black';			// Font colour for Paper.js
 var achPaper;							// Paper.js obj for 'ach' text
 var achMax = 1;							// Max number of achievements
 var achStates = new Array(achMax);		// Flags for achievements being completed
